--- a/P1/S2/Parrafos.html
+++ b/P1/S2/Parrafos.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ej-1: Encabezados</title>
+    <title>Ej-2: Parrafos</title>
 </head>
 <body>
-    <h1>Encabezado H1</h1>
-    <h2>Encabezado H2</h2>
-    <h3>Encabezado H3</h3>
-    <h4>Encabezado H4</h4>
-    <h5>Encabezado H5</h5>
-    <h6>Encabezado H6</h6>
+    <p>Esto es un párrafo. Puede ser todo lo extenso que se quiera.
+        Aunque en el HTML lo coloquemos en varias
+        líneas,
+        en el renderizado se coloca en la misma línea
+        y se ajusta al ancho de la pantalla
+        del navegador
+    </p>
+    <p>Esto es otro párrafo.
+        Se coloca separado del anterior
+    </p>
+    <p>Este párrafo tiene 3 líneas,
+        pero el navegador las coloca juntas
+        Otra línea...          y los espacios también
+        se eliminan
+    </p>
 </body>
 </html>
