--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -7,27 +7,65 @@
     <title>CV</title>
 </head>
 <body>
-        <h1>PATRICIA PÉREZ OCHAYTA</h1>
-        <h2>Estudios</h2>
+    <center><h1>CARONTE</h1></center>
+
+  
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ej-6: Imagen</title>
+    </head>
+    <body>
+        <img src="Logo-urjc.png" alt="Imagen: Logo-urjc">
+    </body>
+    </html>
+
+    <table> 
+        <tr>
+            <td>
+        <h3>Sobre mí</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    
+
+        <h3>Experiencia Laboral</h2>
         <ul>
             <li></li>
             <li></li>
             <li></li>
         </ul>
 
-        <h3>Experiencia Profesional</h2>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-
-        <h3>Idiomas</h2>
+        <h3>(algo más)</h2>
             <ul>
                 <li></li>
                 <li></li>
                 <li></li>
             </ul>
+
+        </td> 
+        <td>  
+
+        <h3>Referencias</h2>
+             <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+             </ul>
+        
+         <h3>Contacto</h2>
+             <ul>
+                 <li></li>
+                 <li></li>
+                  <li></li>
+             </ul>
+            </td> 
+            </tr>
+            </table>   
+
 
 </body>
 </html>
