Cambio de colores

--- a/P1/S3/Ejercicio2.html
+++ b/P1/S3/Ejercicio2.html
@@ -11,9 +11,9 @@
   <body>
     <div>
       <p style="color:red;">P1</p>
-      <p style="color:rgb(255, 251, 0);"id="quien">P2</p>
-      <p style="color:rgb(43, 255, 0);"class="cual">P3</p>
-      <p style="color:rgb(17, 0, 255);">P4</p>
+      <p style="color:yellow;"id="quien">P2</p>
+      <p style="color:green;"class="cual">P3</p>
+      <p style="color:blue;">P4</p>
     </div>
   </body>
 
