--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -10,7 +10,7 @@
     <center><h1>CARONTE</h1></center>
 
     <body>
-        <img src="Logo-urjc.png" alt="Imagen: Logo-urjc">
+        <img src="image0.png" alt="Imagen: Imagen 0">
     </body>
 
     </html>
