--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -10,8 +10,10 @@
     <center><h1>CARONTE</h1></center>
 
     <body>
-        <img src="image0.png" alt="Imagen: Imagen 0">
+        <img src="image0.png" alt="Imagen: Imagen 0" width="140" height="170">
     </body>
+
+    <body background="im3.jpg">
 
     </html>
 
