--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -14,7 +14,7 @@
         <img src="image0.png" alt="Imagen: Imagen 0" width="140" height="170">
     </body>
 
-    <body background="im3.jpg">
+    <body background="im2.jpeg">
 
     </html>
 
