--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -11,10 +11,10 @@
     <center><h1>CARONTE</h1></center>
 
     <body>
-        <img src="image0.png" alt="Imagen: Imagen 0" width="140" height="170">
+        <center><img src="image0.png" alt="Imagen: Imagen 0" width="220" height="280"></center>
     </body>
 
-    <body background="im2.jpeg">
+    <body background="im1.jpeg">
 
     </html>
 
