Intento añadir columnas

--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -18,9 +18,15 @@
 
     </html>
 
-    <table> 
-        <tr>
-            <td>
+    <div id="columnas">
+
+        <h3 class="fn">Sobre mí</h3>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    
         <h3>Sobre mí</h2>
         <ul>
             <li></li>
@@ -59,10 +65,8 @@
                  <li></li>
                   <li></li>
              </ul>
-            </td> 
-            </tr>
-            </table>   
-
+             
+            </div>
 
 </body>
 </html>
