--- a/P1/S1/CV.html
+++ b/P1/S1/CV.html
@@ -2,160 +2,83 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>CV Nacho Cruz</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Currículum Caronte</title>
+    <link rel="stylesheet" type="text/css" href="CV.css">
   </head>
+
   <body>
-    <h1 align='center'>Rick Sánchez</h1>
-    <table>
-        <tr>
-          <td>
-            <img src="foto.jpg" alt="Este soy yo">
-            <div class="special">
-              <h3  align='center'>Redes sociales</h3>
-              <p>
-                <img src="instagram.png" alt="@ricksanchez" width="20px">
-                @ricksanchez
-              </p>
-              <p>
-                <img src="facebook.png" alt="Rick Sánchez"  width="20px">
-                Rick Sánchez
-              </p>
-              <p>
-                <img src="linkedin.png" alt="Rick Sánchez"  width="20px">
-                Rick Sánchez
-              </p>
-            </div>
-          </td>
-          <td>
-            <div class="special" align="center">
-              Mi nombre es Rick Sánchez y soy el padre de la ciencia
-              de este mundo. He inventado el viaje interdimensional
-              mediante la pistola de portales. Soy embajador en más
-              de 147 universos, ¡¡y tengo mi propia serie de televisión!!
-            </div>
-            <div class="special">
 
-              <h3  align='center'>Contacto</h3>
-              <p>
-                <img src="telefono.png" alt="telefono" width="20px">
-                612345678 / 912345678
-              </p>
-              <p>
-                <img src="email.png" alt="correo electónico" width="20px">
-                ricksanchez@gazorpazorp.es
-              </p>
-              <p>
-                <img src="ubicacion.png" alt="Ubicacion" width="20px">
-                Planeta Tierra del Universo C-137
-              </p>
-              <p>
-                <img src="pagina.png" alt="Pagina web" width="20px">
-                <a href="https://www.rickandmorty.com/">Enlace a la pagina web</a>
-              </p>
-            </div>
-          </td>
-        </tr>
-    </table>
+      <div class="perfilCaronte">
+        <img src="image0.png" alt="." id="f_perfil">
+        <img src="moneda-imagen-animada-0004.gif" alt="Imagen: gif">   
+      </body>
+        <h1>CARONTE</h1>
+        <h3>El barquero de la muerte</h3>
+      </div>
 
-    <div align="center">
-      <h3>Formación</h3>
-      <p>Septiembre 2005-Junio 2010, Universidad Rey Juan Carlos, Grado en matemáticas(excelentes calificaciones)</p>
-      <p>Septiembre 20010-Junio 2012, Universidad Politécnica de Madrid, Máster en Física aplicada</p>
-      <p>Septiembre 2012-Junio 2014, Universidad Complutense de Madrid, Máster en Ingeniería aeroespacial</p>
-    </div>
-    <div align="center">
-      <h3>Cursos profesionales</h3>
-      <p>Permiso de conducción espacial tipo C</p>
-      <p>Monitor de ocio y tiempo libre</p>
-      <p>Licencias de armas láser</p>
-    </div>
-    <div align="center">
-      <h3>Experiencia laboral</h3>
-      <p>Profesor de ciencias en el instituto Meeseek</p>
-      <p>Dj en discoteca C-51</p>
-      <p>Espía para el gobierno espacial de los Estados Unidos</p>
-    </div>
-    <div>
-      <h3 align="center">Idiomas </h3>
-      <ol>
-        <li align="center">
-          Español
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-        </li>
-        <li align="center">
-          Inglés
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="22px">
-          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="22px">
-        </li>
-        <li align="center">
-          Alienígena
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
-          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="22px">
-        </li>
-      </ol>
-    </div>
-    <div>
-      <h3 align="center">Ofimática</h3>
-        <div class="special2" align="center">
-          <p>Atom</p>
-          <img src="50.png" alt="50 %"  width="60px">
-        </div>
-        <div class="special2" align="center">
-          <p>JavaScript</p>
-          <img src="25.png" alt="25 %"  width="60px">
-        </div>
-        <div class="special2" align="center">
-          <p>HTML</p>
-          <img src="100.png" alt="100 %"  width="60px">
-        </div>
-        <div class="special2" align="center">
-          <p>FreeCAD</p>
-          <img src="75.png" alt="75 %"  width="60px">
-        </div>
-    </div>
-    <div >
-      <h3  align='center'>Hobbies</h3>
-        <table  class="special4" align='center'>
-          <td class="special3">
-            <p >
-              <img src="naturaleza.jpg" alt="naturaleza"  width="160px">
-            </p>
-          </td>
-          <td class="special3">
-            <p>Naturaleza</p>
-          </td>
-        </table>
-        <table  class="special4" align='center'>
-          <td class="special3">
-            <p>Música</p>
-          </td>
-          <td class="special3">
-            <p>
-              <img src="musica.jpg" alt="musica"  width="160px">
-            </p>
-          </td>
-        </table>
-        <table  class="special4 "align='center'>
-          <td class="special3">
-            <p>
-              <img src="pesca.jpg" alt="pesca"  width="160px">
-            </p>
-          </td>
-          <td class="special3">
-            <p>Pesca</p>
-          </td>
-        </table>
+    <div class="perfil">
+    <h4>DATOS PERSONALES</h4>
+      <img src="css/eeuu.jpg" alt="." class="f_datos">
+      <p>Nacionalidad: Estadounidense</p>
+      <img src="css/nacimiento.jpg" alt="." class="f_datos">
+      <p>Fecha de nacimiento : No recuerdo cuando nací</p>
+      <img src="css/residencia.jpg" alt="." class="f_datos">
+      <p>Residencia	Casa de Jim Hopper, antes el laboratorio de Hawkins.</p>
+      <img src="css/gmail.jpg" alt="." class="f_datos">
+      <p>Once@strangerthingstvflix.es</p>
+      <img src="css/movil.jpg" alt="." class="f_datos">
+      <p>+34 609 909 009</p>
+      <br>
+      <a href="https://www.instagram.com/strangerthingstv/">
+        <button type="button" name="Instagram">
+          <img src="css/instagram.jpg" alt="." class="f_boton">
+        </button></a>
+      <a href="https://www.youtube.com/watch?v=x7Yq9MJUqjY">
+      <button type="button" name="youtube">
+        <img src="css/youtube.jpg" alt="." class="f_boton">
+      </button></a>
+      <a href="https://open.spotify.com/playlist/37i9dQZF1DXc3KPAjGyPdm">
+        <button type="button" name="Spotify">
+          <img src="css/spotify.jpg" alt="." class="f_boton">
+        </button></a>
+      <a href="https://github.com/carmengl98/2019-2020-CSAAI-Practicas">
+        <button type="button" name="Github">
+          <img src="css/github.jpg" alt="." class="f_boton">
+        </button></a>
+      </div>
+
+      <div class="datos">
+    <h4>SOBRE MÍ</h4>
+      <p>Soy el barquero de Hades, encargado de transportar las almas de los difuntos en su 
+        barca hacia el inframundo. Los difuntos deben llevar una moneda para pagar su viaje 
+        al más allá. Aquellos que no pudieran pagar tendran que vagar cien años por las riberas 
+        del Aqueronte, tiempo después del cual accedo a llevarlos sin cobrar.</p>
+
+      <h4>ESTUDIOS y EXPERIENCIA LABORAL</h4>
+        <ul>
+          <li>Sigo formandome en el Instituto Hawkins.</li>
+          <li>Trabajo de azafata (durante 2 años).</li>
+          <li>Experiencia cuidando niños.</li>
+        </ul>
+
+    <h4>HABILIDADES</h4>
+      <ul>
+        <li>Telequinesis: Capacidad mover objetos con la mente.</li>
+        <li>Bioquinesis: Capacidad para controlar la materia orgánica y seres vivos,
+          como causar parálisis muscular.</li>
+        <li>Clarividencia: Capacidad de encontrar una persona con tan solo una
+          fotografía o con objetos.</li>
+        <li>Alterar el campo electromagnético.</li>
+        <li>Proyección de voz: Habilidad de comunicar lo que dice una persona
+          a través de un aparato de comunicación.</li>
+      </ul>
+      <h4>HOBBIES E INTERESES.</h4>
+      <ul>
+        <li>Bailar y cantar.</li>
+        <li>Comer gofres.</li>
+        <li>Boxeo y artes marciales.</li>
+        <li>Amante del cine.</li>
+      </ul>
     </div>
   </body>
 </html>
