Cambio en el texto

--- a/P1/S1/CV.html
+++ b/P1/S1/CV.html
@@ -19,7 +19,7 @@
     <div class="perfil">
     <h4>DATOS PERSONALES</h4>
       <img src="css/eeuu.jpg" alt="." class="f_datos">
-      <p>Nacionalidad: Estadounidense</p>
+      <p>Lugar de residencia: Rio Aqueronte</p>
       <img src="css/nacimiento.jpg" alt="." class="f_datos">
       <p>Fecha de nacimiento : No recuerdo cuando nací</p>
       <img src="css/residencia.jpg" alt="." class="f_datos">
