Añadir imagenes y info

--- a/P1/S1/CV.html
+++ b/P1/S1/CV.html
@@ -9,43 +9,37 @@
   <body>
 
       <div class="perfilCaronte">
-        <img src="image0.png" alt="." id="f_perfil">
-        <img src="moneda-imagen-animada-0004.gif" alt="Imagen: gif">   
+        <img src="image0.png" alt="." id="f_perfil">  
       </body>
         <h1>CARONTE</h1>
-        <h3>El barquero de la muerte</h3>
+        <img src="moneda-imagen-animada-0004.gif" alt="Imagen: gif"> 
       </div>
 
     <div class="perfil">
     <h4>DATOS PERSONALES</h4>
-      <img src="css/eeuu.jpg" alt="." class="f_datos">
-      <p>Lugar de residencia: Rio Aqueronte</p>
-      <img src="css/nacimiento.jpg" alt="." class="f_datos">
-      <p>Fecha de nacimiento : No recuerdo cuando nací</p>
-      <img src="css/residencia.jpg" alt="." class="f_datos">
-      <p>Residencia	Casa de Jim Hopper, antes el laboratorio de Hawkins.</p>
-      <img src="css/gmail.jpg" alt="." class="f_datos">
-      <p>Once@strangerthingstvflix.es</p>
-      <img src="css/movil.jpg" alt="." class="f_datos">
-      <p>+34 609 909 009</p>
+      <img src="barco.png" alt="." class="f_datos">
+      <p>Lugar de residencia: Rio Aqueronte ("Rio del dolor")</p>
+      <img src="columna.png" alt="." class="f_datos">
+      <p>Padres: Erebo y Nix</p>
+      <img src="reloj.png" alt="." class="f_datos">
+      <p>Nacimiento: Un tiempo muy antiguo</p>
+      <img src="mail.png" alt="." class="f_datos">
+      <p>labarcadecaronte@greciantigua.com</p>
+      <img src="tlfn.png" alt="." class="f_datos">
+      <p>+34 647 077 333</p>
       <br>
-      <a href="https://www.instagram.com/strangerthingstv/">
+      <a href="https://www.instagram.com/p/CUnFYCgosv4/?utm_medium=copy_link">
         <button type="button" name="Instagram">
-          <img src="css/instagram.jpg" alt="." class="f_boton">
+          <img src="Instagram_logo.webp" alt="." class="f_boton">
         </button></a>
-      <a href="https://www.youtube.com/watch?v=x7Yq9MJUqjY">
+      <a href="https://youtu.be/QNYS9am6-p0">
       <button type="button" name="youtube">
-        <img src="css/youtube.jpg" alt="." class="f_boton">
+        <img src="youtube.png" alt="." class="f_boton">
       </button></a>
-      <a href="https://open.spotify.com/playlist/37i9dQZF1DXc3KPAjGyPdm">
+      <a href="https://open.spotify.com/track/5o3pP3SWueoHRCytmwaL52?si=dbd6bc38610f4520">
         <button type="button" name="Spotify">
-          <img src="css/spotify.jpg" alt="." class="f_boton">
+          <img src="spotify.png" alt="." class="f_boton">
         </button></a>
-      <a href="https://github.com/carmengl98/2019-2020-CSAAI-Practicas">
-        <button type="button" name="Github">
-          <img src="css/github.jpg" alt="." class="f_boton">
-        </button></a>
-      </div>
 
       <div class="datos">
     <h4>SOBRE MÍ</h4>
@@ -74,10 +68,17 @@
       </ul>
       <h4>HOBBIES E INTERESES.</h4>
       <ul>
-        <li>Bailar y cantar.</li>
-        <li>Comer gofres.</li>
-        <li>Boxeo y artes marciales.</li>
+        <li>Remar.</li>
+        <li>Cantar.</li>
+        <li>Cobrar a las almas perdidas.</li>
         <li>Amante del cine.</li>
+      </ul>
+
+      <h4>REFERENCIAS.</h4>
+      <ul>
+        <li>Hades (Rey del inframundo).</li>
+        <li>Moiras.</li>
+
       </ul>
     </div>
   </body>
