Correccion de error en el link

--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Currículum Caronte</title>
-    <link rel="stylesheet" type="text/css" href="CV.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
 
   <body>
@@ -50,21 +50,18 @@
 
       <h4>ESTUDIOS y EXPERIENCIA LABORAL</h4>
         <ul>
-          <li>Sigo formandome en el Instituto Hawkins.</li>
-          <li>Trabajo de azafata (durante 2 años).</li>
-          <li>Experiencia cuidando niños.</li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
 
     <h4>HABILIDADES</h4>
       <ul>
-        <li>Telequinesis: Capacidad mover objetos con la mente.</li>
-        <li>Bioquinesis: Capacidad para controlar la materia orgánica y seres vivos,
-          como causar parálisis muscular.</li>
-        <li>Clarividencia: Capacidad de encontrar una persona con tan solo una
-          fotografía o con objetos.</li>
-        <li>Alterar el campo electromagnético.</li>
-        <li>Proyección de voz: Habilidad de comunicar lo que dice una persona
-          a través de un aparato de comunicación.</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
       <h4>HOBBIES E INTERESES.</h4>
       <ul>
