--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -12,7 +12,7 @@
         <img src="image0.png" alt="." id="f_perfil">  
       </body>
         <h1>CARONTE</h1>
-        <img src="moneda-imagen-animada-0004.gif" alt="Imagen: gif"> 
+        <img src="moneda-imagen-animada-0004.gif" alt="."> 
       </div>
 
     <div class="perfil">
@@ -50,9 +50,9 @@
 
       <h4>ESTUDIOS y EXPERIENCIA LABORAL</h4>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li> Graduado en la escuela del Olimpo</li>
+          <li> Grado en tanatologia</li>
+          <li> Master en deidades y mitologia</li>
         </ul>
 
     <h4>HABILIDADES</h4>
@@ -63,20 +63,31 @@
         <li></li>
         <li></li>
       </ul>
-      <h4>HOBBIES E INTERESES.</h4>
+      <img src="caronte.gif">
+
+      <h4>HOBBIES E INTERESES</h4>
       <ul>
-        <li>Remar.</li>
-        <li>Cantar.</li>
-        <li>Cobrar a las almas perdidas.</li>
-        <li>Amante del cine.</li>
+        <li>Remar</li>
+        <li>Cantar</li>
+        <li>Cobrar a las almas perdidas</li>
+        <li>Amante del cine</li>
       </ul>
 
-      <h4>REFERENCIAS.</h4>
-      <ul>
-        <li>Hades (Rey del inframundo).</li>
-        <li>Moiras.</li>
+      <h4>VINCULOS</h4>
+      <div id="contenedor">
+        <div>
+          <p>Jefe: Hades (Rey del inframundo)</p>
+          <img src="hades.gif" alt="." id="f_hades">
+          <p>A quien entrego las almas que hayan pahado el precio de mi viaje.</p>
+        </div>
+        <div>
+          <p>Hermanas: Moiras</p>
+          <img src="moiras.gif" alt="." id="f_hades">
+          <p>Me invocan cuando un alma esta a punto de morir para que vaya a buscarla.</p>
+        </div>
+      </div>
 
-      </ul>
     </div>
+
   </body>
 </html>
