Creacion archivos ejemplo

--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -76,12 +76,12 @@
       <h4>VINCULOS</h4>
       <div id="contenedor">
         <div>
-          <p>Jefe: Hades (Rey del inframundo)</p>
+          <h5>Jefe:</h5> <p>Hades (Rey del inframundo)</p> 
           <img src="hades.gif" alt="." id="f_hades">
-          <p>A quien entrego las almas que hayan pahado el precio de mi viaje.</p>
+         <p>A quien entrego las almas que hayan pahado el precio de mi viaje.</p>
         </div>
         <div>
-          <p>Hermanas: Moiras</p>
+          <h5>Hermanas:</h5> <p>Moiras</p>
           <img src="moiras.gif" alt="." id="f_hades">
           <p>Me invocan cuando un alma esta a punto de morir para que vaya a buscarla.</p>
         </div>
