--- a/P2/S5/Incremento_Decremento.html
+++ b/P2/S5/Incremento_Decremento.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="ContadorObjetosLiteral.js" defer></script>
-    <title>Ejemplo 3</title>
+    <script src="Incremento_Decremento.js" defer></script>
+    <title>Ejemplo 4</title>
 </head>
 <body>
     <p id="display">0</p>
-    <button type="button" id="boton">INC</button>
+    <button type="button" id="boton_inc">INC</button>
+    <button type="button" id="boton_dec">DEC</button>
 </body>
 </html>
