--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -55,13 +55,12 @@
           <li> Master en deidades y mitologia</li>
         </ul>
 
-    <h4>HABILIDADES</h4>
+    <h4>Curiosidades</h4>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Pase un año en la carcel por transportar a Hercules hasta el inframundo sin que este pagara.</li>
+        <li>Mi ruta no se limita al rio Aqueronte. Tambien puedo navegar por otros rios del inframundo:
+          Cocito ("Rio de los lamentos"), o Lete ("Rio del olvido").</li>
+       <li>Si las almas no tienen como pagarme, deberan vagar durante cien años por la orilla del rio antes de que les deje subir a la barca.</li>  
       </ul>
       <img src="caronte.gif">
 
@@ -70,10 +69,10 @@
         <li>Remar</li>
         <li>Cantar</li>
         <li>Cobrar a las almas perdidas</li>
-        <li>Amante del cine</li>
+        <li>Atizar con una larga vara a los difuntos que protestan durante el viaje</li>
       </ul>
 
-      <h4>VINCULOS</h4>
+      <h4>CONTACTOS</h4>
       <div id="contenedor">
         <div>
           <h5>Jefe:</h5> <p>Hades (Rey del inframundo)</p> 
