--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Currículum Caronte</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="cv.css">
   </head>
 
   <body>
