--- a/P2/S6/AnimarObjeto.html
+++ b/P2/S6/AnimarObjeto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="Ejemplo-03.js" defer></script>
-    <link rel="stylesheet" href="canvas-01.css">
-    <title>Canvas 01</title>
+    <script src="anim-01.js" defer></script>
+    <link rel="stylesheet" href="anim-01.css">
+    <title>Ejemplo 8: Animación</title>
 </head>
 <body>
     <h2>Canvas</h2>
