--- a/P2/S6/AñadirImagen.html
+++ b/P2/S6/AñadirImagen.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="Ejemplo-03.js" defer></script>
-    <link rel="stylesheet" href="canvas-01.css">
-    <title>Canvas 01</title>
+    <script src="AñadirImagen.js" defer></script>
+    <link rel="stylesheet" href="AñadirImagen.css">
+    <title>Canvas 07</title>
 </head>
 <body>
     <h2>Canvas</h2>
     <canvas id="canvas"></canvas>
+    <img src="Logo_urjc.png" alt="No encontrada" id="logo-urjc">
+    <p>Texto de prueba</p>
 </body>
 </html>
