--- a/P3/Prueba.html
+++ b/P3/Prueba.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="Prueba.js" defer></script>
         <link rel="stylesheet" href="Prueba.css">
-        <title>Practica ·</title>
+        <title>Videojuego Retro</title>
     </head>
     <body>
-        <h1>MATA ZOMBIES</h2>
+        <img src="titulo.png">
         <canvas id="canvas"></canvas>
     </body>    
 </html>
