--- a/P3/index.html
+++ b/P3/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="Prueba.js" defer></script>
-        <link rel="stylesheet" href="Prueba.css">
+        <script src="Videojuego.js" defer></script>
+        <link rel="stylesheet" href="Videojuego.css">
         <title>Videojuego Retro</title>
     </head>
     <body>
