--- a/P4/index.html
+++ b/P4/index.html
@@ -24,8 +24,8 @@
     <br>
 
     <div id = "botones">
-        <button class = "button" type="button" id="colores">COLORES</button>
-        <button class = "button" type="button" id="grises">ESCALA DE GRISES</button>
+        <button class = "button" type="button" id="colores">A COLOR</button>
+        <button class = "button" type="button" id="grises">BLANCO Y NEGRO</button>
         <button class = "button" type="button" id = "negativo">NEGATIVO</button>
     </div>
 
@@ -33,20 +33,20 @@
     <div id = "controladores">
       <div id = "deslizador1">
           <p>Controlador R</p>
-          <input type="range" id="deslizadorR" min="0" max="255" value="255"/>
-          <p id="range_valueR">255</p>
+          <input type="range" id="deslizadorR" min="0" max="200" value="200"/>
+          <p id="range_valueR">200</p>
       </div>
 
       <div id = "deslizador2">
           <p>Controlador G</p>
-          <input type="range" id="deslizadorG" min="0" max="255" value="255"/>
-          <p id="range_valueG">255</p>
+          <input type="range" id="deslizadorG" min="0" max="200" value="200"/>
+          <p id="range_valueG">200</p>
       </div>
 
       <div id = "deslizador3">
           <p>Controlador B</p>
-          <input type="range" id="deslizadorB" min="0" max="255" value="255"/>
-          <p id="range_valueB">255</p>
+          <input type="range" id="deslizadorB" min="0" max="200" value="200"/>
+          <p id="range_valueB">200</p>
       </div>
     </div>
 
