--- a/P1/S1/index.html
+++ b/P1/S1/index.html
@@ -77,7 +77,7 @@
         <div>
           <h5>Jefe:</h5> <p>Hades (Rey del inframundo)</p> 
           <img src="hades.gif" alt="." id="f_hades">
-         <p>A quien entrego las almas que hayan pahado el precio de mi viaje.</p>
+         <p>A quien entrego las almas que hayan pagado el precio de mi viaje.</p>
         </div>
         <div>
           <h5>Hermanas:</h5> <p>Moiras</p>
