--- a/P4/index.html
+++ b/P4/index.html
@@ -32,19 +32,19 @@
 
     <div id = "controladores">
       <div id = "deslizador1">
-          <p>Controlador R</p>
+          <p>Rojo</p>
           <input type="range" id="deslizadorR" min="0" max="130" value="130"/>
           <p id="range_valueR">130</p>
       </div>
 
       <div id = "deslizador2">
-          <p>Controlador G</p>
+          <p>Verde</p>
           <input type="range" id="deslizadorG" min="0" max="130" value="130"/>
           <p id="range_valueG">130</p>
       </div>
 
       <div id = "deslizador3">
-          <p>Controlador B</p>
+          <p>Azul</p>
           <input type="range" id="deslizadorB" min="0" max="130" value="130"/>
           <p id="range_valueB">130</p>
       </div>
